# forest

./: Cargo.toml  Justfile  README.md
examples/: parser.rs
examples/project/: .ara.toml  .gitignore  composer.json  gen.php  readme.md
examples/project/definitions/: stdlib.d.ara
examples/project/src/: bar.ara  foo.ara  qux.ara
src/: config.rs  error.rs  hash.rs  lib.rs  logger.rs  main.rs  serializer.rs  source.rs  tree.rs
src/analyzer/: issue.rs  mod.rs  traverser.rs
src/analyzer/code_info/: definition_reference_collector.rs  definition_reference_storage.rs  mod.rs  symbol_collector.rs  symbol_storage.rs
src/analyzer/code_info/reflection/: mod.rs
src/analyzer/visitor/: assign_to_this.rs  assign_to_unwriteable_expression.rs  await_in_loop.rs  builtin_types_generic_arguments_count.rs  default_for_variadic.rs  definition_collector.rs  discard_operation.rs  duplicate_parameter.rs  invalid_operand_for_arithmetic_operation.rs  keyword_must_be_lowercase.rs  mod.rs  modifier_group_definition_analyzer.rs  naming_convention.rs  operation_cannot_be_used_for_reading.rs  parameters_after_variadic.rs  parameters_analyzer.rs  redundant_import.rs  required_parameter_after_optional.rs  return_from_constructor.rs  return_from_never_function.rs  return_from_void_function.rs  return_statement_analyzer.rs  self_reference_analyzer.rs  standalone_block_statement.rs  ternary_operation_should_be_an_if_statement.rs  try_statement_analyzer.rs  type_definition_analyzer.rs  unreachable_code.rs  unsafe_finally_block.rs  unsupported_features_analyzer.rs  using_this_outside_of_class_scope.rs
src/reporter/: mod.rs
tests/: lib.rs  source.rs
tests/examples/project-a/src/: foo.ara
tests/examples/project-a/src/Bar/: bar.ara
tests/examples/project-a/src/Foo/Bar/: bar.ara
tests/examples/project-a/src/Foo/Bar/Baz/: baz.ara
tests/examples/project-b/src/Bar/: bar.ara
