[package]
name = "ara_forest"
version = "0.0.0"
edition = "2021"
description = "A cached, multi-threaded parsing library for Ara Programming Language 🍃"
readme = "README.md"
repository = "https://github.com/ara-lang/forest"
documentation = "https://docs.rs/ara_forest"
homepage = "https://ara-lang.io"
exclude = ["/.github/*"]
authors = ["Saif Eddin Gmati <azjezz@protonmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["ara", "php", "programming-language", "parser"]
categories = ["compilers", "development-tools::build-utils"]

[dependencies]
ara_parser = { version = "0.6.0" }
ara_source = { version = "0.2.0" }
ara_reporting = { version = "0.6.0" }
serde = { version = "1.0.152", features = ["derive"] }
num_cpus = { version = "1.15.0"}

[profile.release]
opt-level = 3
debug = false
strip = 'symbols'
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'abort'
incremental = true
codegen-units = 1
rpath = true
